@@ -3,6 +3,9 @@ WIP
 * Brake Bias Widget
   - No longer resets baseline bias delta while game is paused (requested by user "matteocnt92"). Baseline bias delta now also resets while vehicle is stationary during formation lap.
 
+* Stint History Widget
+  - No longer resets current stint data while game is paused (requested by user "ebeninca").
+
 * Trailing Widget
   - [New]Added "show_steering" option (requested by user "Badorio"), which shows steering input plot. This option is disabled by default.
 
